første del af movie appen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Movie App</h1>
     </header>
     <main>
-      <!-- Movie List -->
+      <!-- Film listen -->
       <section id="movie-list">
         <article class="movie-card" tabindex="0">
           <img
@@ -121,6 +121,9 @@
           </div>
         </article>
       </section>
+      <div class="movie-list-empty">
+        <p>🎬 Ingen film fundet...</p>
+      </div>
     </main>
     <!-- Footer -->
     <footer>
