--- a/index.html
+++ b/index.html
@@ -17,113 +17,8 @@
     <main>
       <!-- Film listen -->
       <section id="movie-list">
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/0/0b/Barbie_2023_poster.jpg"
-            alt="Poster of Barbie"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Barbie <span class="movie-year">(2023)</span></h3>
-            <p class="movie-genre">Adventure, Comedy, Fantasy</p>
-            <p class="movie-rating">⭐ 7</p>
-            <p class="movie-director"><strong>Director:</strong> Greta Gerwig</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/8/8e/Dune_%282021_film%29.jpg"
-            alt="Poster of Dune"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Dune <span class="movie-year">(2021)</span></h3>
-            <p class="movie-genre">Adventure, Drama, Sci-Fi</p>
-            <p class="movie-rating">⭐ 8</p>
-            <p class="movie-director"><strong>Director:</strong> Denis Villeneuve</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BNTc0YmQxMjEtODI5MC00NjFiLTlkMWUtOGQ5NjFmYWUyZGJhXkEyXkFqcGc@._V1_.jpg"
-            alt="Poster of Dune: Part Two"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Dune: Part Two <span class="movie-year">(2024)</span></h3>
-            <p class="movie-genre">Action, Adventure, Drama</p>
-            <p class="movie-rating">⭐ 8.7</p>
-            <p class="movie-director"><strong>Director:</strong> Denis Villeneuve</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BOWNmMzAzZmQtNDQ1NC00Nzk5LTkyMmUtNGI2N2NkOWM4MzEyXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
-            alt="Poster of Everything Everywhere All at Once"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Everything Everywhere All at Once <span class="movie-year">(2022)</span></h3>
-            <p class="movie-genre">Action, Adventure, Comedy</p>
-            <p class="movie-rating">⭐ 7.8</p>
-            <p class="movie-director"><strong>Director:</strong> Daniel Kwan, Daniel Scheinert</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://m.media-amazon.com/images/I/51v5ZpFyaFL._AC_.jpg"
-            alt="Poster of Fight Club"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Fight Club <span class="movie-year">(1999)</span></h3>
-            <p class="movie-genre">Drama</p>
-            <p class="movie-rating">⭐ 8.8</p>
-            <p class="movie-director"><strong>Director:</strong> David Fincher</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/67/Forrest_Gump_poster.jpg"
-            alt="Poster of Forrest Gump"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Forrest Gump <span class="movie-year">(1994)</span></h3>
-            <p class="movie-genre">Drama, Romance</p>
-            <p class="movie-rating">⭐ 8.8</p>
-            <p class="movie-director"><strong>Director:</strong> Robert Zemeckis</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/7/7b/Goodfellas.jpg"
-            alt="Poster of Goodfellas"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Goodfellas <span class="movie-year">(1990)</span></h3>
-            <p class="movie-genre">Biography, Crime, Drama</p>
-            <p class="movie-rating">⭐ 8.7</p>
-            <p class="movie-director"><strong>Director:</strong> Martin Scorsese</p>
-          </div>
-        </article>
-
-        <article class="movie-card" tabindex="0">
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMjExMjkwNTQ0Nl5BMl5BanBnXkFtZTcwNTY0OTk1Mw@@._V1_.jpg"
-            alt="Poster of Inception"
-            class="movie-poster" />
-          <div class="movie-info">
-            <h3>Inception <span class="movie-year">(2010)</span></h3>
-            <p class="movie-genre">Action, Adventure, Sci-Fi</p>
-            <p class="movie-rating">⭐ 8.8</p>
-            <p class="movie-director"><strong>Director:</strong> Christopher Nolan</p>
-          </div>
-        </article>
+        <!--tom container - klar til javascript-->
       </section>
-      <div class="movie-list-empty">
-        <p>🎬 Ingen film fundet...</p>
-      </div>
     </main>
     <!-- Footer -->
     <footer>
