--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Rasmus Cederdorff - RACE" />
-    <meta name="description" content="Project Template" />
-    <link rel="stylesheet" href="app.css" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <title>Movie App</title>
-  </head>
+<html lang="da">
 
-  <body>
-    <header>
-      <h1>Movie App</h1>
-    </header>
-    <main>
-      <!-- Film listen -->
-      <section id="movie-list">
-        <!--tom container - klar til javascript-->
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer>
-      <p>© RACE - Rasmus Cederdorff</p>
-    </footer>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Movie App Session 3</title>
+  <link rel="stylesheet" href="app.css" />
+</head>
 
-    <script src="app.js"></script>
-  </body>
+<body>
+  <header>
+    <h1>🎬 Movie Database</h1>
+    <p>Søg, filtrer og sortér dine yndlingsfilm</p>
+  </header>
+
+  <main>
+    <!-- Filter Bar -->
+    <section class="filterbar">
+      <input id="search-input" type="search" placeholder="Søg film..." />
+      <select id="genre-select">
+        <option value="all">Alle genrer</option>
+        <!-- Genre options fra js -->
+      </select>
+      <!--sort dropdown-->
+      <select id="sort-select">
+        <option value="none">Ingen sortering</option>
+        <option value="title">Sortér: Titel (A-Å)</option>
+        <option value="year">Sortér: År (nyeste først)</option>
+        <option value="rating">Sortér: Rating (højeste først)</option>
+      </select>
+    </section>
+    <!-- Movie grid, film liste -->
+    <section id="movie-list" class="movie-grid">
+      <!-- Movies indsættes her via JavaScript -->
+    </section>
+  </main>
+
+  <!--altid link til js inden slut body tagget-->
+  <script src="app.js"></script>
+</body>
+
 </html>
