de sidste detaljer

--- a/index.html
+++ b/index.html
@@ -4,37 +4,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movie App Session 3</title>
+  <title>Movie App</title>
   <link rel="stylesheet" href="app.css" />
 </head>
 
 <body>
   <header>
     <h1>🎬 Movie Database</h1>
-    <p>Søg, filtrer og sortér dine yndlingsfilm</p>
   </header>
 
   <main>
     <!-- Filter Bar -->
     <section class="filterbar">
-      <input id="search-input" type="search" placeholder="Søg film..." />
+      <input id="search-input" type="search" placeholder="Søg..." />
+      <!-- Genre select -->
       <select id="genre-select">
         <option value="all">Alle genrer</option>
-        <!-- Genre options fra js -->
       </select>
-      <!--sort dropdown-->
+      <!--sortering dropdown-->
       <select id="sort-select">
         <option value="none">Ingen sortering</option>
         <option value="title">Sortér: Titel (A-Å)</option>
         <option value="year">Sortér: År (nyeste først)</option>
         <option value="rating">Sortér: Rating (højeste først)</option>
       </select>
+      <!--år range filter-->
+      <div class="year-filter">
+        <label> År:</label>
+        <input type="number" id="year-from" placeholder="Fra år" min="1900" max="2030" />
+        <span>til</span>
+        <input type="number" id="year-to" placeholder="Til år" min="1900" max="2030" />
+      </div>
+      <!--rating range filter-->
+      <div class="rating-filter">
+        <label> Rating:</label>
+        <input type="number" id="rating-from" placeholder="Fra" min="0" max="10" step="0.1" />
+        <span>til</span>
+        <input type="number" id="rating-to" placeholder="Til" min="0" max="10" step="0.1" />
+      </div>
+      <!--clear filters knap-->
+      <button id="clear-filters" class="clear-btn"> 🗑️ Ryd alle filtre</button>
     </section>
     <!-- Movie grid, film liste -->
     <section id="movie-list" class="movie-grid">
       <!-- Movies indsættes her via JavaScript -->
     </section>
   </main>
+
+    <!-- Movie Detail Modal -->
+    <dialog id="movie-dialog">
+      <form method="dialog">
+        <button id="close-dialog" aria-label="Close">✕</button>
+        <div id="dialog-content">
+          <!-- Movie details will be injected here via JavaScript -->
+        </div>
+      </form>
+    </dialog>
 
   <!--altid link til js inden slut body tagget-->
   <script src="app.js"></script>
